Fix ul/ol spacing

--- a/docs/main.scss
+++ b/docs/main.scss
@@ -234,7 +234,7 @@ ul, ol {
 .post-list ul,
 blockquote ul, blockquote ol {
     background-color: transparent;
-    padding: 0 0 0 $space;
+    padding: 0 $space;
     box-shadow: none;
 }
 
